--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,10 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET
+    - name: Setup .NET 4.8
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 4.8.0
+        dotnet-version: '4.8.0'
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
