--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,13 +13,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        dotnet-version: [ '4.8.x','5.0.x' ]
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET 
+    - name: Setup dotnet ${{ matrix.dotnet-version }} 
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '4.8.x'
+        dotnet-version: ${{ matrix.dotnet-version }}
+    - name: Disply dotnet version
+      run: dotnet --version
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
