--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dotnet-version: [ '4.8.x','5.0.x' ]
+        dotnet-version: [ '4.8.x','5.0.x','7.0.x' ]
     steps:
     - uses: actions/checkout@v3
     - name: Setup dotnet ${{ matrix.dotnet-version }} 
