--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -85,7 +85,7 @@ jobs:
     #- name: Restore the application
      # run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
      # env:
-        Configuration: ${{ matrix.configuration }}
+        #Configuration: ${{ matrix.configuration }}
 
     # Decode the base 64 encoded pfx and save the Signing_Certificate
     - name: Decode the pfx
